force-app/main/default/objects/BLND_DFTT_Folder__c/BLND_DFTT_Folder__c.object-meta.xml
<CustomObject>
    <label>TableTop Folder</label>
    <nameField>
        <label>Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TableTop Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>