force-app/main/default/objects/BLND_DFTT_Folder__c/fields/BLND_Access_List__c.field-meta.xml
<CustomField>
    <fullName>BLND_Access_List__c</fullName>
    <label>Access List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>