force-app/main/default/objects/BLND_DFTT_Folder__c/fields/BLND_Flag2__c.field-meta.xml
<CustomField>
    <fullName>BLND_Flag2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag2</label>
    <type>Checkbox</type>
</CustomField>